# termbot

./: README.md
C_impl/: termbot.c
rust_impl/: Cargo.toml
rust_impl/.cargo/: config.toml
rust_impl/src/: main.rs
