[package]
edition = "2021"
name = "rp2040-project-template"
version = "0.1.0"

[dependencies]
cortex-m = "0.7.2"
rp2040-boot2 = "0.2.0"
rp2040-hal = { version = "0.6.0", features = [ "defmt" ] }
fugit = "0.3.5"
usb-device= "0.2.9"

cortex-m-rt = "0.7"
panic-halt= "0.2.0"
cortex-m-rtic = "1.1.2"
nb = "1.0"
i2c-pio = "0.4.0"
heapless = "0.7.9"
embedded-sdmmc = { git = "https://github.com/rust-embedded-community/embedded-sdmmc-rs.git", rev = "db58253bb326d20e177c733ebc0b051ef0dcee0f" }
smart-leds = "0.3.0"
ws2812-pio = "0.4.0"
ssd1306 = "0.7.0"
embedded-graphics = "0.7.1"
hd44780-driver = "0.4.0"
pio = "0.2.0"
pio-proc = "0.2.1"
critical-section = "1.0.0"
usbd-serial = "0.1.1"
usbd-hid = "0.5.1"
rp-pico = "0.5"
defmt = "0.3.0"
defmt-rtt = "0.3.0"
embedded-hal = { version = "0.2.5", features = ["unproven"] }
panic-probe = { version = "0.3", features = ["print-defmt"] }


# cargo build/run
[profile.dev]
codegen-units = 1
debug = 2
debug-assertions = true
incremental = false
opt-level = 3
overflow-checks = true

# cargo build/run --release
[profile.release]
codegen-units = 1
debug = 2
debug-assertions = false
incremental = false
lto = 'fat'
opt-level = 3
overflow-checks = false

# do not optimize proc-macro crates = faster builds from scratch
[profile.dev.build-override]
codegen-units = 8
debug = false
debug-assertions = false
opt-level = 0
overflow-checks = false

[profile.release.build-override]
codegen-units = 8
debug = false
debug-assertions = false
opt-level = 0
overflow-checks = false

# cargo test
[profile.test]
codegen-units = 1
debug = 2
debug-assertions = true
incremental = false
opt-level = 3
overflow-checks = true

# cargo test --release
[profile.bench]
codegen-units = 1
debug = 2
debug-assertions = false
incremental = false
lto = 'fat'
opt-level = 3
